base/mariadb/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: session-mariadb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0234dcaa80edc39d3,subnet-07ba2270e41ad9860
    alb.ingress.kubernetes.io/security-groups: sg-06e7915929b6a7672
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: session-mariadb
          servicePort: 80
